# ShapeNet-Render

./: .gitignore  CMakeLists.txt  main.cpp
Dependencies/: GLGemeotryBase.h  MaterialLoader.h  OBJLoader.h
Dependencies/Loader/: Loader.cpp  Loader.h  tiny_obj_loader.h
Utility/: GLInclude.h
shader/: bg.frag  bg.vert  phong.frag  phong.vert
src/App/: App.cpp  App.h
src/Renderer/: Renderer.cpp  Renderer.h
src/ScreenShot/: ScreenShot.cpp  ScreenShot.h
